# configuratarr

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
.claude/skills/add-resource/: SKILL.md
.claude/skills/add-service/: SKILL.md
.claude/skills/core-architecture/: SKILL.md
.claude/skills/keep-docs-current/: SKILL.md
.claude/skills/nix-devshell/: SKILL.md
.claude/skills/openapi-tools/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  flake-update.yml  promote.yml  release-please.yml
crates/autobrr-v1/: Cargo.toml
crates/autobrr-v1/spec/: autobrr-v1.json
crates/autobrr-v1/src/: diff.rs  lib.rs  service.rs
crates/autobrr-v1/tests/: e2e.rs  spec_conformance.rs
crates/bazarr-v1/: Cargo.toml
crates/bazarr-v1/spec/: bazarr-v1-gen-openapi3.json
crates/bazarr-v1/src/: lib.rs  service.rs
crates/bazarr-v1/tests/: e2e.rs
crates/cmd-doc-gen/: Cargo.toml
crates/cmd-doc-gen/src/: main.rs
crates/config-doc-gen/: Cargo.toml
crates/config-doc-gen/src/: main.rs
crates/core/: Cargo.toml
crates/core-cli/: Cargo.toml
crates/core-cli/src/: lib.rs
crates/core-config/: Cargo.toml
crates/core-config/src/: lib.rs  registry.rs
crates/core-config/tests/: load.rs
crates/core-http/: Cargo.toml
crates/core-http/src/: lib.rs
crates/core-macros/: Cargo.toml
crates/core-macros/src/: attrs.rs  enums.rs  field_kind.rs  lib.rs  resource.rs  service.rs
crates/core-testkit/: Cargo.toml
crates/core-testkit/src/: lib.rs
crates/core/src/: apply.rs  described.rs  descriptor.rs  engine.rs  field.rs  form.rs  lib.rs  merge.rs  plan.rs  reconcile.rs  refs.rs  resolve.rs  resolver.rs  secret.rs  service.rs
crates/core/src/codec/: config.rs  fields_blob.rs  mod.rs  standard.rs  string_enum.rs  tagged_by_impl.rs
crates/core/tests/: apply_order.rs  codec_fields_map.rs  codec_flatten.rs  codec_nested.rs  codec_provider.rs  codec_standard.rs  config_decode.rs  config_present_to_wire.rs  executor.rs  form.rs  merge.rs  provider_macros.rs  refs.rs  render.rs  resolve.rs  resource_macro.rs  secret.rs  service_macro.rs  tag.rs
crates/jellyfin-v11/: Cargo.toml
crates/jellyfin-v11/src/: lib.rs  service.rs
crates/jellyfin-v11/tests/: e2e.rs  spec_conformance.rs
crates/lazylibrarian-v1/: Cargo.toml
crates/lazylibrarian-v1/spec/: lazylibrarian-v1.json
crates/lazylibrarian-v1/src/: http.rs  lib.rs  service.rs
crates/lazylibrarian-v1/tests/: e2e.rs  (+1 more)
crates/lidarr-v1/: Cargo.toml
crates/prowlarr-v1/: Cargo.toml
crates/prowlarr-v1/src/: lib.rs  service.rs
crates/prowlarr-v1/src/resources/: app_profile.rs  application.rs  application_sync_level.rs  authentication_required_type.rs  authentication_type.rs  certificate_validation_type.rs  custom_filter.rs  development_config.rs  download_client.rs  download_client_config.rs  download_protocol.rs  host_config.rs  indexer.rs  indexer_privacy.rs  indexer_proxy.rs  mod.rs  notification.rs  provider.rs  proxy_type.rs  raw_provider.rs  tag.rs  ui_config.rs  update_mechanism.rs
crates/prowlarr-v1/src/resources/applications/: lazy_librarian.rs  lidarr.rs  mod.rs  mylar.rs  radarr.rs  readarr.rs  sonarr.rs  whisparr.rs
crates/prowlarr-v1/src/resources/download_clients/: deluge.rs  flood.rs  freebox.rs  hadouken.rs  mod.rs  nzbget.rs  nzbvortex.rs  pneumatic.rs  qbittorrent.rs  rtorrent.rs  sabnzbd.rs  torrent_blackhole.rs  torrent_download_station.rs  transmission.rs  usenet_blackhole.rs  usenet_download_station.rs  utorrent.rs  vuze.rs
crates/prowlarr-v1/src/resources/indexer_proxies/: flaresolverr.rs  http.rs  mod.rs  socks4.rs  socks5.rs
crates/prowlarr-v1/src/resources/notifications/: apprise.rs  custom_script.rs  discord.rs  email.rs  join.rs  mailgun.rs  mod.rs  notifiarr.rs  ntfy.rs  prowl.rs  sendgrid.rs  signal.rs  simplepush.rs  telegram.rs  twitter.rs  webhook.rs
crates/prowlarr-v1/tests/: e2e.rs  spec_conformance.rs
crates/prowlarr-v1/tests/testdata/app_profile/: config.yaml
crates/prowlarr-v1/tests/testdata/application/: config.yaml
crates/prowlarr-v1/tests/testdata/custom_filter/: config.yaml
crates/prowlarr-v1/tests/testdata/development_config/: config.yaml
crates/prowlarr-v1/tests/testdata/download_client/: config.yaml
crates/prowlarr-v1/tests/testdata/host_config/: config.yaml
crates/prowlarr-v1/tests/testdata/indexer/: config.yaml
crates/prowlarr-v1/tests/testdata/indexer_proxy/: config.yaml
crates/prowlarr-v1/tests/testdata/notification/: config.yaml
crates/prowlarr-v1/tests/testdata/ui_config/: config.yaml
crates/radarr-v3/: Cargo.toml
crates/service-registry/: Cargo.toml
crates/sonarr-v3/: Cargo.toml
docs/: COMMANDS.md  CONFIG.md  HOME_MANAGER_OPTIONS.md  NIXOS_OPTIONS.md  autobrr-v1-config.md  bazarr-v1-config.md  commands.md  contributors.md  home_manager_options.md  jellyfin-v11-config.md  lazylibrarian-v1-config.md  lidarr-v1-config.md  nixos_options.md  prowlarr-v1-config.md  radarr-v3-config.md  sonarr-v3-config.md
modules/: docs.nix  home-manager.nix  nixos.nix  options.nix
nix/: crane.nix  mk-service-checks.nix  package.nix  shells.nix
nix/e2e/: autobrr-v1.nix  bazarr-v1.nix  jellyfin-v11.nix  lazylibrarian-v1.nix  lidarr-v1.nix  prowlarr-v1.nix  radarr-v3.nix  sonarr-v3.nix
nix/e2e-shells/: _common.nix  autobrr-v1.nix  bazarr-v1.nix  jellyfin-v11.nix  lazylibrarian-v1.nix  lidarr-v1.nix  prowlarr-v1.nix  radarr-v3.nix  sonarr-v3.nix
pkgs/: default.nix
specs/: autobrr-v1.json  lidarr-v1.json  prowlarr-v1.json  seerr-v1.json  sonarr-v3.json  sonarr-v5.json  terraform_providers.txt
src/: cli.rs  config.rs  main.rs  resolver.rs
src/client/: mod.rs
src/sync/: display.rs  mod.rs
tests/: cli_tests.rs  client_tests.rs  sync_tests.rs
tests/common/: mod.rs
tools/: common.py  common_test.py  compare_schemas.py  compare_schemas_test.py  diff_resource.py  diff_resource_test.py  fixture.py  gen_resource_model.py  gen_resource_model_test.py  get_path.py  get_path_test.py  get_resource.py  get_resource_test.py  list_paths.py  list_paths_test.py  list_resources.py  list_resources_test.py
(+454 files in other folders)
