[package]
name    = "config-doc-gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "config-doc-gen"
path = "src/main.rs"

[dependencies]
core-lib         = { path = "../core" }
service-registry = { path = "../service-registry" }
radarr-v3   = { path = "../radarr-v3", optional = true }
sonarr-v3   = { path = "../sonarr-v3", optional = true }
anyhow      = { workspace = true }
clap        = { workspace = true }

[features]
default   = ["radarr-v3", "sonarr-v3"]
radarr-v3 = ["dep:radarr-v3"]
sonarr-v3 = ["dep:sonarr-v3"]
