[package]
name    = "core-config"
version = "0.2.0"
edition = "2024"

[dependencies]
core-lib         = { path = "../core" }
service-registry = { path = "../service-registry" }
radarr-v3 = { path = "../radarr-v3", optional = true }
sonarr-v3 = { path = "../sonarr-v3", optional = true }
prowlarr-v1 = { path = "../prowlarr-v1", optional = true }
anyhow.workspace       = true
serde_json.workspace   = true
serde-saphyr.workspace = true

[features]
default     = ["radarr-v3", "sonarr-v3", "prowlarr-v1"]
radarr-v3   = ["dep:radarr-v3"]
sonarr-v3   = ["dep:sonarr-v3"]
prowlarr-v1 = ["dep:prowlarr-v1"]
