[package]
name    = "core-config"
version = "0.1.0"
edition = "2024"

[dependencies]
core-lib         = { path = "../core" }
service-registry = { path = "../service-registry" }
radarr-v3 = { path = "../radarr-v3", optional = true }
sonarr-v3 = { path = "../sonarr-v3", optional = true }
prowlarr-v1 = { path = "../prowlarr-v1", optional = true }
lidarr-v1 = { path = "../lidarr-v1", optional = true }
jellyfin-v11 = { path = "../jellyfin-v11", optional = true }
bazarr-v1 = { path = "../bazarr-v1", optional = true }
anyhow.workspace       = true
serde_json.workspace   = true
serde-saphyr.workspace = true

[features]
default     = ["radarr-v3", "sonarr-v3", "prowlarr-v1", "lidarr-v1", "jellyfin-v11", "bazarr-v1"]
radarr-v3   = ["dep:radarr-v3"]
sonarr-v3   = ["dep:sonarr-v3"]
prowlarr-v1 = ["dep:prowlarr-v1"]
lidarr-v1   = ["dep:lidarr-v1"]
jellyfin-v11 = ["dep:jellyfin-v11"]
bazarr-v1   = ["dep:bazarr-v1"]
