[package]
name    = "prowlarr-v1"
version = "0.2.0"
edition = "2024"

[dependencies]
core-lib    = { path = "../core" }
core-macros = { path = "../core-macros" }
anyhow.workspace     = true
serde_json.workspace = true

[dev-dependencies]
core-testkit = { path = "../core-testkit" }
serde-saphyr.workspace = true
tokio.workspace     = true
jsonschema.workspace = true
